# master-thesis

./: .gitignore  1dexample.py  README.md  assembler.py  ddpoisson.vts  errestimator.py  errornorms.py  femspace.py  finelement.py  heat.py  linearsolver.py  localint.py  logger.py  main.py  mesh.py  owrelaxation.py  pdesolver.py  phyelement.py  poisson_sq.vtu  pyproject.toml  quadrature.py  refelement.py  requirements.txt  timestepper.py  visualize.py
experiments/: ROSWR_1D.ipynb  experiment_utils.py  mesh.ipynb  toy.py
fem/: assembler.py  boundary.py  femspace.py  linearsolver.py  localint.py  mesh.py  phyelement.py  quadrature.py  refelement.py  structured_mesh.py  testspace.py  testspeed.py  timestepper.py
figures/: unstsq_global.af  unstsqext.af
fom/: heat.py  heat_fom.py  heat_oswr.py  oswr_heat.py  oswrelaxation.py  owrelaxation.py  parschwarz.py  poisson.py  schwarz.py
master_thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: ROSWR_1D.ipynb
rom/: heat_rom.py  heat_roswr.py  heatrom.py  pod.py  reducedowr.py  reducedstepper.py  rheat.py  romheat.py  roswr_heat.py  roswrelaxation.py
test/: stmesh.py  stress.py  test1D.py  test2D.py  testSchwarz.py
tests/: decomptest.py  stmesh.py  stress.py  test1D.py  test2D.py  test2DROM.py  testSchwarz.py  test_heat.py  test_mesh1D.py  test_mesh2D.py  test_oswr.py  test_poisson.py  test_rbound.py  test_rheat.py  test_roswr.py  test_schwarz.py  test_speed.py  testpoisson.py  testrom.py  testsparse.py
text/: discrete.aux  discrete.fdb_latexmk  discrete.fls  discrete.out  discrete.tex  (+27 more)
(+55 files in other folders)
